# cmake-hello

./: CMakeLists.txt  README.md
src/: main.cpp
toolchains/: apple-arm64.cmake  linux-x86_64.cmake
